--- a/static/views/home.html
+++ b/static/views/home.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h1>Hello world</h1>
-  <p class="lead">Tagline goes here...</p>
+  <h1>Yamojo</h1>
+  <p class="lead">Cast your vote for the next song to play!</p>
 
   <br/>
   <form name="createPlaylist" class="" ng-submit="changeView('{{playlist}}');">
