--- a/front/sass/zhd.sass
+++ b/front/sass/zhd.sass
@@ -17,11 +17,17 @@
     height: 307px
 
   .controls
+    margin-top: 45px
     button
       text-decoration: none
       cursor: pointer
       text-align: center
       color: #ECF0F1
+
+
+  #search-track
+    margin-top: 24px
+    height: 39px
 
 /* site theme - converted with http://css2sass.heroku.com/*/
 /* ---------- */
